--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,12 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: subscription-manager
+    env_file:
+      - .env
     ports:
       - "${PORT:-3001}:${PORT:-3001}"
     volumes:
       - subscription-data:/app/data
-    environment:
-      - API_KEY=${API_KEY}
-      - NODE_ENV=production
-      - PORT=${PORT:-3001}
-      - BASE_CURRENCY=${BASE_CURRENCY:-CNY}
-      - TIANAPI_KEY=${TIANAPI_KEY}
-      - DATABASE_PATH=${DATABASE_PATH:-/app/data/database.sqlite}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "node", "-e", "const http=require('http');http.get('http://localhost:${PORT:-3001}/api/health',res=>process.exit(res.statusCode===200?0:1)).on('error',()=>process.exit(1));"]
