feat: add Hong Kong Dollar (HKD) currency support

--- a/.env.production.example
+++ b/.env.production.example
@@ -14,7 +14,7 @@ API_KEY=your_secure_api_key_here
 # PORT=3001
 
 # Base currency for the system (default: CNY)
-# Supported: USD, EUR, GBP, CNY, JPY, CAD, AUD, TRY
+# Supported: USD, EUR, GBP, CNY, JPY, CAD, AUD, TRY, HKD
 # BASE_CURRENCY=CNY
 
 # Database path (default: /app/data/database.sqlite in Docker)
