--- a/.env.development.example
+++ b/.env.development.example
@@ -8,7 +8,7 @@ PORT=3001
 
 # ==================== CURRENCY CONFIGURATION ====================
 # Base currency for the system (default: CNY)
-# Supported: USD, EUR, GBP, CNY, JPY, CAD, AUD, TRY
+# Supported: USD, EUR, GBP, CNY, JPY, CAD, AUD, TRY, HKD
 BASE_CURRENCY=CNY
 
 # ==================== EXCHANGE RATE CONFIGURATION ====================
